--- a/SharpScript/SharpScript/SharpScript.csproj
+++ b/SharpScript/SharpScript/SharpScript.csproj
@@ -45,6 +45,7 @@
     <Compile Include="IEngine.cs" />
     <Compile Include="ILexer.cs" />
     <Compile Include="Lexer.cs" />
+    <Compile Include="ObjectDumper.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Script.cs" />
