--- a/SharpScript/SharpScript/SharpScript.csproj
+++ b/SharpScript/SharpScript/SharpScript.csproj
@@ -41,6 +41,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="StateMachine\IStateMachine.cs" />
     <Compile Include="LexicalErrorException.cs" />
     <Compile Include="Position.cs" />
     <Compile Include="Engine.cs" />
@@ -52,6 +53,8 @@
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Script.cs" />
+    <Compile Include="StateMachine\StateMachine.cs" />
+    <Compile Include="StateMachine\Transition.cs" />
     <Compile Include="Token.cs" />
   </ItemGroup>
   <ItemGroup>
