--- a/SharpScript/SharpScript/SharpScript.csproj
+++ b/SharpScript/SharpScript/SharpScript.csproj
@@ -53,7 +53,9 @@
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Script.cs" />
+    <Compile Include="StateMachine\State.cs" />
     <Compile Include="StateMachine\StateMachine.cs" />
+    <Compile Include="StateMachine\StateMachineMatch.cs" />
     <Compile Include="StateMachine\Transition.cs" />
     <Compile Include="Token.cs" />
   </ItemGroup>
