--- a/SharpScript/SharpScript/SharpScript.csproj
+++ b/SharpScript/SharpScript/SharpScript.csproj
@@ -53,6 +53,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Script.cs" />
     <Compile Include="Source.cs" />
+    <Compile Include="StringExtension.cs" />
     <Compile Include="Token.cs" />
   </ItemGroup>
   <ItemGroup>
